[gd_scene load_steps=8 format=3 uid="uid://flmr31hfks82"]

[ext_resource type="Texture2D" uid="uid://bst2wgstrjjwa" path="res://assets/icons/visibility_96dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.svg" id="1_7308c"]
[ext_resource type="Script" uid="uid://dht4v2n614maw" path="res://scenes/ui/image_layers_ui/layer.gd" id="1_w1lpd"]
[ext_resource type="Script" uid="uid://d3r6ekoyuc1pq" path="res://misc/fake_button.gd" id="2_7308c"]
[ext_resource type="Texture2D" uid="uid://cxox3xrb3a3gb" path="res://assets/icons/visibility_off_96dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.svg" id="2_n0aaf"]
[ext_resource type="Texture2D" uid="uid://bor6wec5clpuu" path="res://assets/images/Checkerboard_16.svg" id="5_7308c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7308c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlvew"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.984314, 0.768627, 0.211765, 1)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="Layer" type="PanelContainer"]
custom_minimum_size = Vector2(0, 96)
offset_right = 156.0
offset_bottom = 56.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_7308c")
script = ExtResource("1_w1lpd")

[node name="FakeButton" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_7308c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ActivePanel" type="Panel" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rlvew")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="IndexLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.910156, 0.910156, 0.910156, 1)
theme_override_font_sizes/font_size = 24
text = "88"
horizontal_alignment = 1

[node name="VisibleButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("2_n0aaf")
texture_pressed = ExtResource("1_7308c")
stretch_mode = 5

[node name="CoverBG" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 3
custom_minimum_size = Vector2(144, 144)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_7308c")
expand_mode = 1
stretch_mode = 1

[node name="Cover" type="TextureRect" parent="MarginContainer/HBoxContainer/CoverBG"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(144, 144)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
